Update makefiles and copyright dates; Set as RT safe

--- a/plugins/MVerb/Makefile
+++ b/plugins/MVerb/Makefile
@@ -18,7 +18,7 @@ OBJS_DSP = \
 OBJS_UI  = \
 	DistrhoArtworkMVerb.cpp.o \
 	DistrhoUIMVerb.cpp.o \
-	font/Kh-Kangrey.cpp
+	font/Kh-Kangrey.cpp.o
 
 # --------------------------------------------------------------
 # Do some magic
