--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,9 +33,12 @@ jobs:
         LDFLAGS: -static-libgcc -static-libstdc++
       run: |
         make -j $(nproc)
+    - name: Set sha8
+      id: slug
+      run: echo "::set-output name=sha8::$(echo ${{ github.sha }} | cut -c1-8)"
     - uses: actions/upload-artifact@v2
       with:
-        name: linux arm64
+        name: ${{ github.event.repository.name }}-linux-arm64-${{ github.event.pull_request.number || steps.slug.outputs.sha8 }}
         path: |
           bin/*
 
@@ -61,9 +64,12 @@ jobs:
         LDFLAGS: -static-libgcc -static-libstdc++
       run: |
         make -j $(nproc)
+    - name: Set sha8
+      id: slug
+      run: echo "::set-output name=sha8::$(echo ${{ github.sha }} | cut -c1-8)"
     - uses: actions/upload-artifact@v2
       with:
-        name: linux armhf
+        name: ${{ github.event.repository.name }}-linux-armhf-${{ github.event.pull_request.number || steps.slug.outputs.sha8 }}
         path: |
           bin/*
 
@@ -81,9 +87,12 @@ jobs:
         LDFLAGS: -static-libgcc -static-libstdc++
       run: |
         make -j $(nproc)
+    - name: Set sha8
+      id: slug
+      run: echo "::set-output name=sha8::$(echo ${{ github.sha }} | cut -c1-8)"
     - uses: actions/upload-artifact@v2
       with:
-        name: linux x64
+        name: ${{ github.event.repository.name }}-linux-x64-${{ github.event.pull_request.number || steps.slug.outputs.sha8 }}
         path: |
           bin/*
 
@@ -105,9 +114,12 @@ jobs:
       run: |
         make NOOPT=true -j $(sysctl -n hw.logicalcpu) && \
         ./dpf/utils/package-osx-bundles.sh
+    - name: Set sha8
+      id: slug
+      run: echo "::set-output name=sha8::$(echo ${{ github.sha }} | cut -c1-8)"
     - uses: actions/upload-artifact@v2
       with:
-        name: macOS universal
+        name: ${{ github.event.repository.name }}-macOS-universal-${{ github.event.pull_request.number || steps.slug.outputs.sha8 }}
         path: |
           *-macOS.pkg
           bin/*
@@ -136,9 +148,12 @@ jobs:
         WINEDEBUG: "-all"
       run: |
         make -j $(nproc)
+    - name: Set sha8
+      id: slug
+      run: echo "::set-output name=sha8::$(echo ${{ github.sha }} | cut -c1-8)"
     - uses: actions/upload-artifact@v2
       with:
-        name: win32
+        name: ${{ github.event.repository.name }}-win32-${{ github.event.pull_request.number || steps.slug.outputs.sha8 }}
         path: |
           bin/*
           !bin/*-ladspa.dll
@@ -162,9 +177,12 @@ jobs:
         WINEDEBUG: "-all"
       run: |
         make -j $(nproc)
+    - name: Set sha8
+      id: slug
+      run: echo "::set-output name=sha8::$(echo ${{ github.sha }} | cut -c1-8)"
     - uses: actions/upload-artifact@v2
       with:
-        name: win64
+        name: ${{ github.event.repository.name }}-win64-${{ github.event.pull_request.number || steps.slug.outputs.sha8 }}
         path: |
           bin/*
           !bin/*-ladspa.dll
