Disable unused filebrowser stuff
Signed-off-by: falkTX <falktx@falktx.com>

--- a/plugins/MVerb/Makefile
+++ b/plugins/MVerb/Makefile
@@ -22,6 +22,7 @@ FILES_UI  = \
 # --------------------------------------------------------------
 # Do some magic
 
+FILE_BROWSER_DISABLED = true
 include ../../dpf/Makefile.plugins.mk
 
 # --------------------------------------------------------------
